some small adjustment to improve mobile visibility

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="fluxo-container">
                 <img src="assets/fluxo.png" alt="Fluxo do processo — versão compacta" id="fluxo-img" tabindex="0">
                 <img src="assets/processo.png" alt="Visão do processo (detalhe)" id="processo-img">
-                <p class="mobile-click-hint"><strong>Click on me 👆🏻!</strong></p>
+                <p class="mobile-click-hint2"><strong>Click on me 👆🏻!</strong></p>
                 <div id="fluxo-popover" role="tooltip" aria-hidden="true">
                     <p>O cidadão apresenta uma defesa (prazo ou cancelamento).</p>
                     <p>Se cancelamento → Regional anexa docs.</p>
