class="mobile-click-hint2 🙄

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     Seu navegador não suporta o vídeo webm.
                 </video>
             </div>
-            <p class="mobile-click-hint"><strong>Eiii... Vc clicou ali? 👆🏻</strong></p>
+            <p class="mobile-click-hint2"><strong>Eiii... Vc clicou ali? 👆🏻</strong></p>
             <div class="tech-flow">
                 <div class="tech-icon" id="docker-icon">🐳 Docker</div>
                 <div class="tech-arrow">→</div>
