--- a/index.html
+++ b/index.html
@@ -41,9 +41,40 @@
             <h2>Sempre curioso e apaixonado por TI, tinha o desenvolvimento como hobbie:</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
+                    <img src="assets/img5.png" alt="Sites">
+                    <div class="overlay-text">Calendário de regime híbrido da equipe</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img5a.png" alt="Sites">
+                    <div class="overlay-text">O raciocínio lógico me motiva</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img6.png" alt="Sites">
+                    <div class="overlay-text">Quem estará presencial na semana</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img7.png" alt="Sites">
+                    <div class="overlay-text">Composição do Tribunal e suas "leis"</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img8.png" alt="Sites">
+                    <div class="overlay-text">Hospedagem gratuita com banco de dados online (Firebase)</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img4.png" alt="BetterFlix">
+                    <div class="overlay-text">Criei minha própria "Netflix" (BetterFlix) 😎</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img9.png" alt="BetterFlix">
+                    <div class="overlay-text">Mostra ratings dos 3 maiores sites de reviews, com valores tratados</div>
+                </div>
+                <div class="carousel-slide">
+                    <img src="assets/img4a.png" alt="BetterFlix">
+                    <div class="overlay-text">Exige manipular arquivos xml (um misto de html com css raiz), o que é surpreendentemente uma delícia</div>
+                </div>
+                <div class="carousel-slide">
                     <img src="assets/img1.png" alt="Nintendo Switch Hack">
-                    <div class="overlay-text">
-                        <a href="https://github.com/sauliiin/4IFIR-Wizard/tree/main/4IFIR%20Wizard" target="_blank" rel="noopener noreferrer">Criação de apps e perfis de overclock para Nintendo Switch (.ini, .json) — com manipulação por HEX (super seguro 🤐) 🤫🏴‍☠️</a>
+                    <div class="overlay-text">Criação de apps e overclock para Nintendo Switch (.ini, .json) — com manipulação por HEX 🤫🏴‍☠️</a>
                     </div>
                 </div>
                 <div class="carousel-slide">
@@ -52,29 +83,8 @@
                 </div>
                 <div class="carousel-slide">
                     <img src="assets/img3.png" alt="Patinete Elétrico Firmware">
-                    <div class="overlay-text">
-                        <a href="https://github.com/sauliiin/BetterFlix" target="_blank" rel="noopener noreferrer">Estragando patinete após hackear demais 🥲</a>
+                    <div class="overlay-text">Estragando patinete após hackear demais 🥲</a>
                     </div>
-                </div>
-                 <div class="carousel-slide">
-                    <img src="assets/img4.png" alt="BetterFlix">
-                    <div class="overlay-text">Criei minha própria "Netflix" (BetterFlix) 😎</div>
-                </div>
-                <div class="carousel-slide">
-                    <img src="assets/img4a.png" alt="BetterFlix">
-                    <div class="overlay-text">Exige manipular arquivos xml (um misto de html com css roots), o que é surpreendentemente uma delícia</div>
-                </div>
-                <div class="carousel-slide">
-                    <img src="assets/img5.png" alt="Sites">
-                    <div class="overlay-text">Criei alguns sites para organizar a rotina da minha equipe</div>
-                </div>
-                <div class="carousel-slide">
-                    <img src="assets/img5a.png" alt="Sites">
-                    <div class="overlay-text">A lógica e os desafios criativos para encontrar soluções sempre me atraíram</div>
-                </div>
-                <div class="carousel-slide">
-                    <img src="assets/img6.png" alt="Sites">
-                    <div class="overlay-text">Conseguimos ver as férias de cada um, quem vai estar presencial no dia e facilita o rodizio de computadores no regime híbrido</div>
                 </div>
             </div>
         </section>
@@ -82,13 +92,13 @@
         <section id="prefeitura" class="panel">
             <div class="timeline-content">
                 <p class="timeline-text">Em 2019 comprei a ideia de criar um sistema para a Prefeitura de Belo Horizonte que permitisse a digitalização dos processos de papéis.</p>
-                <p class="timeline-text">Foi então que percebi 🤔💡:<strong> com minha sólida experiência jurídica, adquiri uma visão analítica de processos e a habilidade para desenvolver soluções de TI eficientes 🦸🏻‍♂️</strong>, passando a atuar também como analista de sistemas.</p>
+                <p class="timeline-text">Foi então que percebi 🤔💡... <strong> com minha sólida experiência jurídica, adquiri uma visão analítica de processos e a habilidade para desenvolver soluções de TI eficientes 🦸🏻‍♂️</strong>, passando a atuar também como analista de sistemas.</p>
                 <p class="timeline-text">Simplificando: este é o fluxo de um sistema que criei com 3 colegas, onde julgamos mais de <strong>20.000</strong> processos.</p>
             </div>
             <div class="fluxo-container">
                 <img src="assets/fluxo.png" alt="Fluxo do processo — versão compacta" id="fluxo-img" tabindex="0">
                 <img src="assets/processo.png" alt="Visão do processo (detalhe)" id="processo-img">
-                <p class="mobile-click-hint2"><strong>Click on me 👆🏻!</strong></p>
+                <p class="mobile-click-hint"><strong>Click on me 👆🏻!</strong></p>
                 <div id="fluxo-popover" role="tooltip" aria-hidden="true">
                     <p>O cidadão apresenta uma defesa (prazo ou cancelamento).</p>
                     <p>Se cancelamento → Regional anexa docs.</p>
@@ -120,13 +130,16 @@
             <div id="fluxao-wrapper">
                  <img src="assets/fluxao.png" alt="fluxao com subfluxo — zoomável" id="fluxao-img">
             </div>
-            <p class="instruction">A imagem "fluxao.png", com opção de zoom. Alguns trechos foram ocultados por questões de privacidade e ética profissional.</p>
+            <p class="instruction">A imagem "fluxao.png", com opção de <strong>zoom</strong>. Alguns trechos foram ocultados por questões de privacidade e ética profissional.</p>
         </section>
         
         <section id="educacao" class="panel">
             <div class="education-text">
-                <h2>Finalmente, em 2022, chegou a hora de virar Dev com diplomas!</h2>
-                <p>Cursei Análise em Desenvolvimento de Sistemas (Newton Paiva) e, já no começo, acelerei 🏃🏻‍♀️‍➡️ em participar de grupo de pesquisas e diversos cursos, de hardware, Python (básico ao avançado), JavaScript, dados, CSS... com uma sede enorme em aprender rápido.</p>
+                <h2>Finalmente, em 2022, chegou a hora de virar Dev com diplomas, certificados e cursos!</h2>
+                <p>Cursei Análise em Desenvolvimento de Sistemas (Newton Paiva) e, já no começo, <strong>🏃🏻‍♀️‍➡️ acelerei 🏃🏻‍♀️‍➡️</strong> para participar de grupo de pesquisas e diversos cursos, de hardware, Python (básico ao avançado), JavaScript, dados, CSS... com uma sede enorme em aprender rápido.</p>
+            </div>
+            <div class="sonic">
+                <img src="assets/runing.gif" alt="sonic">
             </div>
             <div class="education-gallery">
             </div>
@@ -139,7 +152,7 @@
         <section id="estagio" class="panel">
             <h2>Em Jan/2025, a enorme sorte:</h2>
             <p>Me juntei a um Mestre Jedi, e enquanto padawan, comecei como estagiário/assistente de um dev sênior em Python excepcional, que me ajuda a praticar metodologias ágeis (Scrum, Kanban) e me ensina muito sobre <strong>otimização de código, TDD, pytest, manipulação de dados, APIs (Flask/FastAPI) e Docker.</strong></p>
-            <p>Eu não posso postar meu código desenvolvido com o Mestre, em razão de sigilo e ética, mas segue uma breve demonstração dos meus códigos, para ter um vislumbre como minha cabeça funciona 🤯 (se está no celular, clique no vídeo).</p>
+            <p>Eu não posso postar meu código desenvolvido com o Mestre, em razão de sigilo e ética, mas segue uma breve demonstração dos meus códigos, para ter um vislumbre como minha cabeça funciona 🤯.</p>
             <div class="video">
                 <video id="estagio-video" src="assets/video.webm" muted loop playsinline>
                     Seu navegador não suporta o vídeo webm.
@@ -189,7 +202,7 @@
                 <button id="copy-phone">Copiar Telefone</button>
                 <a href="https://www.linkedin.com/in/saulo-hugo-rossi-658760165/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 <a href="https://github.com/sauliiin?tab=repositories" target="_blank" rel="noopener noreferrer">Github</a>
-                <a href="/assets/Saulo_Rossi_FullStack_Developer.pdf" download>Download CV (PDF)</a>
+                <a href="assets/Saulo_Rossi_FullStack_Developer.pdf" download>Download CV (PDF)</a>
             </div>
         </div>
     </div>
