Translated the lazy way

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <body class="animate-bg">
 
     <div id="progress-bar"></div>
+    <div class="lang-switcher">
+        <a href="en.html">EN 🇺🇸</a>
+    </div>
 
     <main>
         <section id="hero" class="panel">
